force-app/objects/Field_Config__mdt.object
<CustomObject>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insert_and_link_if_no_match_found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insert and link if no match found?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Text_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Text Lookup?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text_Lookup_Field_API_Name__c</fullName>
        <label>Text Lookup Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Lookup_sObject_API_Name__c</fullName>
        <label>Text Lookup sObject API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Config</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Field_API_Name__c</columns>
        <columns>Is_Text_Lookup__c</columns>
        <columns>Text_Lookup_Field_API_Name__c</columns>
        <columns>Text_Lookup_sObject_API_Name__c</columns>
        <columns>Insert_and_link_if_no_match_found__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Field Configs</pluralLabel>
</CustomObject>